<resources>
    <string name="app_name">Password Directory</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="enter_pin">4 digit pin</string>
    <string name="error_wrong_pin">Wrong Pin Entered</string>
    <string name="add_entry_text">Add password</string>
    <string name="view_your_passwords">Enter Pin to view your passwords</string>
    <string name="create_pin">Create Pin to view your passwords</string>
    <string name="btn_add">ADD</string>
    <string name="total_passwa">Total:</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <!--AdMob Testing-> ca-app-pub-3940256099942544/1033173712-->

    <!--keyboard numbers-->
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>

    <string name="message_enter_pin">Enter a Pin</string>
    <string name="message_reenter_pin">Re-Enter the Pin</string>
    <string name="message_one_time_process">Re-Enter your Pin. This is a one time process. So note your pin for future user.</string>


    <!--New AdMOb -->
    <!--AdMob Production-> ca-app-pub-9989774996291836/6934257173-->
    <!--ID ca-app-pub-8174138486024352/3354276256 -->
</resources>
